Updated Occitan translation
svn path=/trunk/; revision=13092

--- a/po/oc.po
+++ b/po/oc.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-06-26 11:41+0200\n"
+"PO-Revision-Date: 2007-08-07 14:12+0200\n"
 "Last-Translator: Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>\n"
-"Language-Team: Occitan\n"
+"Language-Team: Occitan <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -884,7 +884,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-column-chooser.c:413
 msgid "_Show"
-msgstr "_Visualizar"
+msgstr "_Visualizacion"
 
 #: ../libnautilus-private/nautilus-column-chooser.c:423
 msgid "Hi_de"
@@ -2279,11 +2279,11 @@ msgid "Couldn't find \"%s\"."
 msgstr "Impossible de trobar \"%s\"."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:734
-#, fuzzy, c-format
+#, c-format
 msgid "Opening %d Item"
 msgid_plural "Opening %d Items"
 msgstr[0] "Dubertura de %d element"
-msgstr[1] "Dubertura de %d element"
+msgstr[1] "Dobertura de %d elements"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:899
 msgid "Sorry, but you can't execute commands from a remote site."
@@ -2488,10 +2488,10 @@ msgid "Are you sure you want to permanently delete \"%s\"?"
 msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:1006
-#, fuzzy, c-format
+#, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr "Volètz dobrir totes los fichièrs ?"
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:1017
 #: ../src/file-manager/fm-tree-view.c:1149
@@ -2557,11 +2557,11 @@ msgid "\"%s\" selected (%s)"
 msgstr "\"%s\" seleccionat (%s)"
 
 #: ../src/file-manager/fm-directory-view.c:2226
-#, fuzzy, c-format
+#, c-format
 msgid "%d item selected (%s)"
 msgid_plural "%d items selected (%s)"
 msgstr[0] "%d element seleccionat (%s)"
-msgstr[1] "%d element seleccionat (%s)"
+msgstr[1] "%d elements seleccionats (%s)"
 
 #. Folders selected also, use "other" terminology
 #: ../src/file-manager/fm-directory-view.c:2234
@@ -2637,13 +2637,13 @@ msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
 msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:3877
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Are you sure you want to permanently delete the %d selected item from the "
 "trash?"
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr "Volètz dobrir totes los fichièrs ?"
+msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:3888
 msgid "If you delete an item, it will be permanently lost."
@@ -2845,7 +2845,7 @@ msgstr ""
 #: ../src/file-manager/fm-tree-view.c:1253
 #: ../src/nautilus-places-sidebar.c:1448
 msgid "_Open"
-msgstr "_Dubrir"
+msgstr "_Dobrir"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6848
@@ -3160,7 +3160,7 @@ msgstr "_Escriptes"
 #: ../src/file-manager/fm-directory-view.c:7735
 #: ../src/file-manager/fm-tree-view.c:1264
 msgid "Open in New Window"
-msgstr "Dobrir dins una fenèstra nòva"
+msgstr "Dobrir dins una fenèstra novèla"
 
 #: ../src/file-manager/fm-directory-view.c:7554
 #: ../src/file-manager/fm-directory-view.c:7743
@@ -3183,14 +3183,14 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:7719
 #, c-format
 msgid "_Open with \"%s\""
-msgstr "_Dubrir amb \"%s\""
+msgstr "_Dobrir amb \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:7737
-#, fuzzy, c-format
+#, c-format
 msgid "Open in %d New Window"
 msgid_plural "Open in %d New Windows"
-msgstr[0] "Dobrir dins %d fenèstra nòva"
-msgstr[1] "Dobrir dins %d fenèstra nòva"
+msgstr[0] "Dobrir dins %d fenèstra novèla"
+msgstr[1] "Dobrir dins %d fenèstras novèlas"
 
 #: ../src/file-manager/fm-directory-view.c:7764
 msgid "Delete all selected items permanently"
@@ -3221,11 +3221,11 @@ msgid "Opening \"%s\"."
 msgstr "Dubertura de \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:8811
-#, fuzzy, c-format
+#, c-format
 msgid "Opening %d item."
 msgid_plural "Opening %d items."
 msgstr[0] "Dubertura de %s element."
-msgstr[1] "Dubertura de %s element."
+msgstr[1] "Dobertura de %s elements."
 
 #: ../src/file-manager/fm-directory-view.c:9703
 msgid "Download location?"
@@ -3701,11 +3701,10 @@ msgstr "Basic"
 
 #. Name label
 #: ../src/file-manager/fm-properties-window.c:2663
-#, fuzzy
 msgid "_Name:"
 msgid_plural "_Names:"
 msgstr[0] "_Nom :"
-msgstr[1] "_Nom :"
+msgstr[1] "_Noms :"
 
 #: ../src/file-manager/fm-properties-window.c:2682
 msgid "Type:"
@@ -4620,18 +4619,18 @@ msgid "Image Type:"
 msgstr ""
 
 #: ../src/nautilus-image-properties-page.c:261
-#, fuzzy, c-format
+#, c-format
 msgid "<b>Width:</b> %d pixel\n"
 msgid_plural "<b>Width:</b> %d pixels\n"
 msgstr[0] "<b>Largor :</b> %d pixel\n"
-msgstr[1] "<b>Largor :</b> %d pixel\n"
+msgstr[1] "<b>Largor :</b> %d pixels\n"
 
 #: ../src/nautilus-image-properties-page.c:265
-#, fuzzy, c-format
+#, c-format
 msgid "<b>Height:</b> %d pixel\n"
 msgid_plural "<b>Height:</b> %d pixels\n"
 msgstr[0] "<b>Nautor :</b> %d pixel\n"
-msgstr[1] "<b>Nautor :</b> %d pixel\n"
+msgstr[1] "<b>Nautor :</b> %d pixels\n"
 
 #: ../src/nautilus-image-properties-page.c:280
 msgid "Failed to load image information"
@@ -4812,7 +4811,7 @@ msgstr "_Favorits"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:428
 msgid "Open New _Window"
-msgstr "Dobrir dins una fenèstra _nòva"
+msgstr "Dobrir dins una fenèstra _novèla"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:429
@@ -4969,9 +4968,8 @@ msgid "Show Notes"
 msgstr ""
 
 #: ../src/nautilus-places-sidebar.c:1456
-#, fuzzy
 msgid "Open in New _Window"
-msgstr "Dobrir dins una fenèstra nòva"
+msgstr "Dobrir dins una fenèstra novèla"
 
 #: ../src/nautilus-places-sidebar.c:1462
 msgid "Remove"
@@ -5276,7 +5274,7 @@ msgstr ""
 
 #: ../src/nautilus-search-bar.c:141
 msgid "Search:"
-msgstr "Recèrcar :"
+msgstr "Recercar :"
 
 #: ../src/nautilus-side-pane.c:427
 msgid "Close the side pane"
@@ -5414,9 +5412,8 @@ msgid ""
 msgstr ""
 
 #: ../src/nautilus-window-menus.c:447
-#, fuzzy
 msgid "Copyright © 1999-2007 The Nautilus authors"
-msgstr "Copyright © 1999-2006 Los autors de Nautilus"
+msgstr "Copyright © 1999-2007 Los autors de Nautilus"
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
