Updated Occitan translation
svn path=/trunk/; revision=13093

--- a/po/oc.po
+++ b/po/oc.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-08-07 14:12+0200\n"
+"PO-Revision-Date: 2007-08-19 17:39+0200\n"
 "Last-Translator: Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -3736,7 +3736,7 @@ msgstr "Talha :"
 #: ../src/file-manager/fm-properties-window.c:2698
 #: ../src/nautilus-location-bar.c:59
 msgid "Location:"
-msgstr "Emplaçament[nbsp]:"
+msgstr "Emplaçament :"
 
 #: ../src/file-manager/fm-properties-window.c:2705
 msgid "Volume:"
@@ -4178,7 +4178,7 @@ msgstr ""
 
 #: ../src/nautilus-connect-server-dialog.c:480
 msgid "_Location (URI):"
-msgstr "Emp_laçament (URI)[nbsp]:"
+msgstr "Emp_laçament (URI) :"
 
 #: ../src/nautilus-connect-server-dialog.c:502
 msgid "_Server:"
@@ -4407,6 +4407,9 @@ msgid ""
 "Local Files Only\n"
 "Never"
 msgstr ""
+"Totjorn\n"
+"Sonque los fichièrs locals\n"
+"Jamai"
 
 #: ../src/nautilus-file-management-properties.glade.h:35
 msgid "Always open in _browser windows"
