Updated Occitan translation
svn path=/trunk/; revision=13094

--- a/po/oc.po
+++ b/po/oc.po
@@ -3,19 +3,18 @@
 # This file is distributed under the same license as the nautilus package.
 # Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>, 2007.
 # 
-# 
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
 "PO-Revision-Date: 2007-08-19 17:39+0200\n"
-"Last-Translator: Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>\n"
-"Language-Team: Occitan <en@li.org>\n"
+"Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
+"Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -5645,21 +5644,3 @@ msgstr ""
 #: ../src/nautilus-zoom-control.c:807
 msgid "Set the zoom level of the current view"
 msgstr ""
-
-#~ msgid "Normal Alpha"
-#~ msgstr "Alpha normal"
-
-#~ msgid "Opacity of the normal icons if frame_text is set"
-#~ msgstr ""
-#~ "OpacitÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ© des "
-#~ "icÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ´nes normales si frame_text est "
-#~ "dÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ©fini"
-
-#~ msgid "Prelight Alpha"
-#~ msgstr "Alpha normal"
-
-#~ msgid "Opacity of the prelight icons if frame_text is set"
-#~ msgstr ""
-#~ "OpacitÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ© des "
-#~ "icÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ´nes normales si frame_text est "
-#~ "dÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ©fini"
