Updated Occitan translation
svn path=/trunk/; revision=13096

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-08-19 17:39+0200\n"
+"PO-Revision-Date: 2007-08-20 18:49+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -124,7 +124,7 @@ msgstr ""
 #: ../data/browser.xml.h:28 ../src/nautilus-emblem-sidebar.c:940
 #: ../src/nautilus-property-browser.c:1824
 msgid "Erase"
-msgstr ""
+msgstr "Suprimir"
 
 #: ../data/browser.xml.h:29
 msgid "Fibers"
@@ -341,7 +341,7 @@ msgstr "Format de data"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:10
 msgid "Default Background Color"
-msgstr ""
+msgstr "Color de fons per defaut"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:11
 msgid "Default Background Filename"
@@ -1095,7 +1095,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations-progress.c:452
 #, c-format
 msgid "(%d:%02d Remaining)"
-msgstr ""
+msgstr "(demòra %d:%02d)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:452
 #: ../libnautilus-private/nautilus-file-operations.c:481
@@ -1120,7 +1120,7 @@ msgstr "Destinari :"
 #: ../libnautilus-private/nautilus-file-operations.c:724
 #: ../libnautilus-private/nautilus-file-operations.c:734
 msgid "Error while moving."
-msgstr ""
+msgstr "Error pendent lo desplaçament."
 
 #: ../libnautilus-private/nautilus-file-operations.c:672
 #, c-format
@@ -1130,7 +1130,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations.c:682
 #: ../libnautilus-private/nautilus-file-operations.c:688
 msgid "Error while deleting."
-msgstr ""
+msgstr "Error pendent la supression."
 
 #: ../libnautilus-private/nautilus-file-operations.c:683
 #, c-format
@@ -2372,7 +2372,7 @@ msgstr ""
 
 #: ../nautilus.desktop.in.in.h:2
 msgid "File Browser"
-msgstr ""
+msgstr "Navegaire de fichièrs"
 
 #: ../src/Nautilus_shell.server.in.h:1
 msgid "Factory for Nautilus shell and file manager"
@@ -2523,7 +2523,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:1346
 #: ../src/nautilus-connect-server-dialog.c:574
 msgid "_Folder:"
-msgstr ""
+msgstr "_Repertòri :"
 
 #: ../src/file-manager/fm-directory-view.c:1351
 msgid "Select Folder to Save Search In"
@@ -3776,7 +3776,7 @@ msgstr "_Escritura"
 
 #: ../src/file-manager/fm-properties-window.c:3243
 msgid "E_xecute"
-msgstr ""
+msgstr "E_xecutar"
 
 #. translators: this gets concatenated to "no read",
 #. * "no access", etc. (see following strings)
@@ -4136,7 +4136,7 @@ msgstr ""
 
 #: ../src/nautilus-connect-server-dialog.c:118
 msgid "Custom Location"
-msgstr ""
+msgstr "Emplaçament personalizat"
 
 #: ../src/nautilus-connect-server-dialog.c:120
 msgid "SSH"
@@ -4144,7 +4144,7 @@ msgstr "SSH"
 
 #: ../src/nautilus-connect-server-dialog.c:123
 msgid "Public FTP"
-msgstr ""
+msgstr "FTP public"
 
 #: ../src/nautilus-connect-server-dialog.c:125
 msgid "FTP (with login)"
@@ -4197,7 +4197,7 @@ msgstr "_Pòrt :"
 
 #: ../src/nautilus-connect-server-dialog.c:594
 msgid "_User Name:"
-msgstr ""
+msgstr "Nom d'_utilizaire :"
 
 #: ../src/nautilus-connect-server-dialog.c:615
 msgid "_Domain Name:"
@@ -4521,7 +4521,7 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:66
 msgid "_Format:"
-msgstr ""
+msgstr "_Format :"
 
 #: ../src/nautilus-file-management-properties.glade.h:67
 msgid "_Only for files smaller than:"
@@ -4670,7 +4670,7 @@ msgstr ""
 #: ../src/nautilus-information-panel.c:846
 #, c-format
 msgid "Open with %s"
-msgstr ""
+msgstr "Dobrir amb %s"
 
 #: ../src/nautilus-location-bar.c:60
 msgid "Go To:"
@@ -5289,7 +5289,7 @@ msgstr "_Acorchis"
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:851
 msgid "Open _Location..."
-msgstr ""
+msgstr "Dobrir un _emplaçament"
 
 #: ../src/nautilus-spatial-window.c:854
 msgid "Close P_arent Folders"
@@ -5491,12 +5491,12 @@ msgstr "Dobrir lo repertòri _parent"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:608
 msgid "Open the parent folder"
-msgstr ""
+msgstr "Dobrir lo repertòri parent"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:614
 msgid "_Stop"
-msgstr ""
+msgstr "_Arrêter"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:618
@@ -5615,7 +5615,7 @@ msgstr ""
 
 #: ../src/nautilus-window-menus.c:705
 msgid "_Up"
-msgstr ""
+msgstr "_Aval"
 
 #: ../src/nautilus-window-menus.c:708
 msgid "_Home"
@@ -5644,3 +5644,4 @@ msgstr ""
 #: ../src/nautilus-zoom-control.c:807
 msgid "Set the zoom level of the current view"
 msgstr ""
+
