sv.po: Swedish translation updated
svn path=/trunk/; revision=13097

--- a/po/sv.po
+++ b/po/sv.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-15 08:54+0200\n"
-"PO-Revision-Date: 2007-08-15 08:55+0100\n"
+"POT-Creation-Date: 2007-08-20 20:26+0200\n"
+"PO-Revision-Date: 2007-08-20 20:28+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -5208,7 +5208,7 @@ msgstr "Gå"
 
 #: ../src/nautilus-query-editor.c:1024
 msgid "Reload"
-msgstr "Läs om"
+msgstr "Uppdatera"
 
 #: ../src/nautilus-query-editor.c:1029
 msgid "Perform or update the search"
@@ -5451,12 +5451,12 @@ msgstr "Stoppa inläsning av aktuell plats"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:613
 msgid "_Reload"
-msgstr "_Läs om"
+msgstr "Uppda_tera"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:614
 msgid "Reload the current location"
-msgstr "Läs om aktuell plats"
+msgstr "Uppdatera aktuell plats"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:617
