--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-20  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2007-08-20  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
