--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@
 # Gustavo Maciel Dias Vieira <gustavo@sagui.org>, 2000-2001.
 # Evandro Fernandes Giovanini <evandrofg@ig.com.br>, 2002-2003, 2006.
 # Gustavo Noronha Silva <kov@debian.org>, 2003.
-# Raphael Higino <raphaelh@uai.com.br>, 2004-2005.
+# Raphael Higino <phhigino@gmail.com>, 2004-2005.
 # Guilherme de S. Pastore <gpastore@gnome.org>, 2006.
 # Leonardo Fereira Fontenelle <leo.fontenelle@gmail.com>, 2007.
 # Og Maciel <ogmaciel@gnome.org>, 2007.
@@ -13,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-08-05 17:46-0300\n"
-"PO-Revision-Date: 2007-08-05 08:18-0300\n"
-"Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
+"POT-Creation-Date: 2007-08-20 22:49+0100\n"
+"PO-Revision-Date: 2007-08-20 20:58-0300\n"
+"Last-Translator: Vladimir Melo <vladimirmelo@foresightlinux.org>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -706,7 +706,7 @@ msgid "Network servers icon name"
 msgstr "Nome do ícone de servidores de rede"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:68
-msgid "Only show folders in the tree sidebar"
+msgid "Only show folders in the tree side pane"
 msgstr "Mostrar apenas pastas na árvore do painel lateral"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:69
@@ -5312,8 +5312,8 @@ msgstr "Painel _Lateral"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:480
-msgid "Change the visibility of this window's sidebar"
-msgstr "Altera a visibilidade da barra lateral desta janela"
+msgid "Change the visibility of this window's side pane"
+msgstr "Alterar a visibilidade do painel lateral desta janela"
 
 #. is_active
 #. name, stock id
@@ -5860,7 +5860,7 @@ msgstr ""
 "Gustavo Maciel Dias Vieira <gustavo@sagui.org>\n"
 "Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
 "Gustavo Noronha Silva <kov@debian.org>\n"
-"Raphael Higino <raphaelh@uai.com.br>\n"
+"Raphael Higino <phhigino@gmail.com>\n"
 "Guilherme de S. Pastore <gpastore@gnome.org>\n"
 "Leonardo Fereira Fontenelle <leo.fontenelle@gmail.com>\n"
 "Og Maciel <ogmaciel@gnome.org>"
