The icon theme changed how the sizes of the emblem icons are used, update
2007-08-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-icon-factory.h:
        * src/file-manager/fm-list-model.c:
        * src/nautilus-sidebar-title.c:
	The icon theme changed how the sizes of the emblem icons
	are used, update to comply with that.


svn path=/trunk/; revision=13100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-08-22  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-container.c:
+        * libnautilus-private/nautilus-icon-factory.c:
+        * libnautilus-private/nautilus-icon-factory.h:
+        * src/file-manager/fm-list-model.c:
+        * src/nautilus-sidebar-title.c:
+	The icon theme changed how the sizes of the emblem icons
+	are used, update to comply with that.
+
 2007-08-14  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
