Updated Occitan translation
svn path=/trunk/; revision=13101

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-08-20 18:49+0200\n"
+"PO-Revision-Date: 2007-08-23 18:26+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -288,7 +288,7 @@ msgstr ""
 
 #: ../data/browser.xml.h:69
 msgid "_Patterns"
-msgstr ""
+msgstr "Motiu"
 
 #: ../data/nautilus.xml.in.h:1
 msgid "Saved search"
@@ -5639,7 +5639,7 @@ msgstr ""
 
 #: ../src/nautilus-zoom-control.c:801
 msgid "Zoom"
-msgstr ""
+msgstr "Zoom"
 
 #: ../src/nautilus-zoom-control.c:807
 msgid "Set the zoom level of the current view"
