--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-23  Artur Flinta  <aflinta@svn.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2007-08-20  Raphael Higino  <raphaelh@svn.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
