--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-24  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-file.c:
+	Avoid crashing if going to file:///# (#436071)
+
 2007-08-22  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-icon-container.c:
