Be more robust against broken extensions (#449488)
2007-08-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-module.c:
	Be more robust against broken extensions (#449488)


svn path=/trunk/; revision=13105

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-24  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-module.c:
+	Be more robust against broken extensions (#449488)
+
+2007-08-24  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-utilities.c:
         * libnautilus-private/nautilus-file.c:
 	Avoid crashing if going to file:///# (#436071)
