Set cwd correctly for scripts on desktop. (#320218) Patch from Sebastien
2007-08-27  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
        (change_to_view_directory):
	Set cwd correctly for scripts on desktop. (#320218)
	Patch from Sebastien Bacher


svn path=/trunk/; revision=13110

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-08-27  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+        (change_to_view_directory):
+	Set cwd correctly for scripts on desktop. (#320218)
+	Patch from Sebastien Bacher
+
 2007-08-24  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-module.c:
