Update for release.
2007-08-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.


svn path=/trunk/; revision=13111

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-27  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release.
+
+2007-08-27  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-directory-view.c:
         (change_to_view_directory):
 	Set cwd correctly for scripts on desktop. (#320218)
