--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.19.91 are:
+* Be more robust against broken extensions
+* Set current working directory right on desktop when running scripts
+* Fix crash on file:///#
+* Update to cope with the new size of emblem icons
+
 Major changes in 2.19.90 are:
 * Auto-size list view filename column again
 * New message for service unavailable error
