--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-28  Alexander Larsson  <alexl@redhat.com>
+
+	* nautilus-folder-handler.desktop.in.in (MimeType):
+	Add colon at end of list.
+
 2007-08-27  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
