Updated Occitan translation
svn path=/trunk/; revision=13115

--- a/po/oc.po
+++ b/po/oc.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.19.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-04-15 20:12+0200\n"
-"PO-Revision-Date: 2007-08-23 18:26+0200\n"
+"PO-Revision-Date: 2007-08-28 20:58+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -4121,7 +4121,7 @@ msgstr "Editar los favorits"
 #: ../src/nautilus-connect-server-dialog-main.c:67
 #, c-format
 msgid "Can't display location \"%s\""
-msgstr ""
+msgstr "Impossible de visualizar l'emplaçament \"%s\""
 
 #: ../src/nautilus-connect-server-dialog-main.c:102
 msgid "[URI]"
