--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-29  I. Felix <ifelix@svn.gnome.org>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 === nautilus 2.19.91 ===
 
 2007-08-26 Gabor Kelemen  <kelemeng@gnome.hu>
