--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-03  Andre Klapper  <a9016009@gmx.de>
+
+	* de.po: fixing a typo.
+
 2007-09-03  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
