--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-10  Ani Peter  <peter.ani@gmail.com>
+
+	* ml.po: Updated Malayalam Translation
+
 2007-09-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
